--- a/app/components/nav-bar.hbs
+++ b/app/components/nav-bar.hbs
@@ -6,6 +6,9 @@
     <LinkTo @route="about" class="menu-about">
       About
     </LinkTo>
+        <LinkTo @route="location" class="menu-about">
+      Location
+    </LinkTo>
     <LinkTo @route="contact" class="menu-contact">
       Contact
     </LinkTo>
