--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -473,14 +473,13 @@ p {
   border: 0;
 }
 
-
 .rental-form {
   max-width: 600px;
   margin: 50px auto;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px #0000001a;
 }
 
 .rental-form label {
@@ -501,7 +500,7 @@ p {
   margin-bottom: 20px;
   border: 1px solid lightgray;
   border-radius: 4px;
-  background-color: rgb(255, 255, 255, 0.75);
+  background-color: #ffffffbf;
 }
 
 .rental-form input:focus,
